force-app/main/default/objects/Office__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greenhouse_io_ID__c</fullName>
        <label>Greenhouse.io ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <label>Office</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Office Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>